# rust-auth-service

./: compose.yml
.github/workflows/: prod.yml
app-service/: Dockerfile
auth-service/: Cargo.toml  Dockerfile
auth-service/.sqlx/: query-46adbe8d65b310ba9a719cc3a0c357c1fd2bfe6bae217847e324ec82e4ea0a33.json  query-bfd31632b3ee43d57d8bcdfb65f2698e51f048ffbbaa704cb008cf6fd07b0d71.json
auth-service/migrations/: 20260403105101_create_users_table.up.sql
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_user_store.rs  mock_email_client.rs  mod.rs
auth-service/src/services/data_stores/: hashmap_2fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  mod.rs  postgrep_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  mod.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
