[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
axum = "0.8.6"
reqwest = { version = "0.12.24", features = ["json"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
validator = { version ="0.20.0", features = ["derive"] }

[dev-dependencies]
fake = "=4.4.0"
rand = "0.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
