[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
chrono = "0.4.42"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
lazy_static = "1.5.0"
rand = "0.9.2"
redis = { version = "0.32.7", features = ["tokio-comp"] }
reqwest = { version = "0.12.24", features = ["json", "cookies"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate"]}
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
validator = { version ="0.20.0", features = ["derive"] }

[dev-dependencies]
fake = { version = "=4.4.0", features = ["uuid"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
test_helpers = { git = "https://github.com/letsgetrusty/test-helpers.git" }
