[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
chrono = "0.4.44"
color-eyre = "0.6.5"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
lazy_static = "1.5.0"
quinn-proto = "0.11.14" # only for resolving CVE vuln
rand = "0.9.4"
redis = { version = "0.32.7", features = ["tokio-comp"] }
reqwest = { version = "0.12.28", features = ["json", "rustls-tls", "cookies"], default-features = false }
rustls-webpki = "0.103.13" # only for resolving CVE vulns
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["registry", "env-filter"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
validator = { version ="0.20.0", features = ["derive"] }

[dev-dependencies]
fake = { version = "=4.4.0", features = ["uuid"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
test_helpers = { git = "https://github.com/letsgetrusty/test-helpers.git" }
